Bug 1618444 don't EnsureNextIteration() in AppendData() after forced shutdown r=padenot

The driver can be safely checked and used with the monitor held, because the
driver is changed only while the monitor is held.

Differential Revision: https://phabricator.services.mozilla.com/D64710